--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
-    <h1>Pet Names</h1>
+    <h1>Pet Name</h1>
     <p>
       Plenty of my friends have developed nicknames with their romantic
       partners. I asked the question on Facebook and got a broad assortment of
